# SEC-RAG

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
app/: chatbot.py  config.py  gradio_app.py  reset_db.py
app/data/processors/: chunk_cache.py  chunking.py  fast_chunk_pipeline.py  ingestion_manager.py
app/data/retrieval/: filing_resolver.py  graph_retriever.py  hybridrag_retriever.py  lightrag_retriever.py  reranker.py  weaviate_retriever.py
app/data/storage/: graph_schema.py  weaviate_schema.py
app/llm/: fin_rag_engine.py  groq_client.py
app/test/: fin_rag_engine.py  test_chunking.py  test_chunking_methods.py  test_new_chunking.py
app/utils/: embedding_utils.py  fetch_sec.py  file_utils.py  llm_utils.py  metadata_utils.py  pdf_to_markdown.py  reranker_utils.py  sec_utils.py
data/chunks/: _ingestion_state.json  meta_10K_2025.json  nvda_10K_2025.json
data/enrichments/: meta_10K_2025_enrichments.json  nvda_10K_2025_enrichments.json
data/processed/: meta_10K_2025.md  nvda_10K_2025.md
utils/: pdf_to_markdown.py
