[project]
name = "fin-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "neo4j>=6.1.0",
    "pydantic-settings>=2.13.0",
    "pymupdf>=1.27.1",
    "sec-api>=1.0.32",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
]
